Fixed issue with text alignment in the header

--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -138,7 +138,7 @@
         width: 50%;
     }
 
-    .txt-container {
+    .txt-container:not(.hero .txt-container) {
         justify-content: center;
         margin: 0 auto;
         max-width: 350px;
